[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/Enemies/enemyRed1.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Enemy_Bullet.tscn" type="PackedScene" id=3]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 46.5, -23, 46.5, -7.9, 27.7, 42, 14.4, 42, 7.5, 38.2, 7.5, 33.7, 11.3, 19, -12.8, 19, -6.8, 39, -9.9, 39, -14.7, 42, -28.5, 42, -28.5, 41.4, -46.5, -4.5, -46.5, -22.4, -32.5, -41.7, -24.5, -42, -8.5, -36.4, -8.5, -34.3, -6.1, -27, 5.5, -27, 5.5, -28.5, 10.3, -38, 14.1, -38, 24.8, -42, 32.5, -42 )

[node name="Shoot" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Move" type="Timer" parent="."]
autostart = true

[node name="Enemy_Bullet" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="timeout" from="Move" to="." method="_on_Move_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
